# fascat

./: .lefthook.yml  CHANGELOG.md  Makefile  PERFORMANCE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: api.md  format-guidelines.md  index.md  quickstart.md  reference.md
fascat/: __init__.py  _ocp.py  analysis.py  asset.py  benchmark.py  cli.py  export_report.py  filter.py  material.py  mesh.py  options.py  pipeline.py  pipeline_file.py  profiles.py  report.py
fascat/io/: brep.py  gltf.py  iges.py  importer.py  jt.py  obj.py  step.py  stl.py  usd.py
fascat/ops/: actions.py  heal.py  hierarchy.py  lod.py  optimize.py  parallel.py  scene.py  stage.py  tessellate.py
scripts/: benchmark.py  build-docs-site.mjs  download-jt-samples.sh
specs/: PERFORMANCE.md  PLAN.md
tests/: test_actions.py  test_analysis.py  test_asset.py  test_backend_errors.py  test_benchmark.py  test_brep_import.py  test_cli.py  test_filter.py  test_gltf.py  test_heal.py  test_hierarchy.py  test_iges_import.py  test_jt.py  test_jt_integration.py  test_lod.py  test_mesh.py  test_metadata.py  test_optimize.py  test_parallel.py  test_pipeline.py  test_profiles.py  test_public_api.py  test_runtime_exports.py  test_scene.py  test_stage.py  test_step_import.py  test_step_pipeline.py  test_tessellate.py  test_usd.py
tests/fixtures/: fortune-cookie.step  prusacaster.step  radial-fan-50x15.step  raspberry-pi-camera-3-mount.step  spool-clamp-body.step  spool-clamp-lid.step  vertical-screw.step
