[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fascat"
dynamic = ["version"]
description = "convert CAD STEP data into realtime-ready OpenUSD and glTF assets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pavelsimo" }]
keywords = ["cad", "cli", "gltf", "openusd", "step", "usd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "cadquery-ocp>=7.7",
    "fast-simplification>=0.1",
    "meshoptimizer>=0.2.30a0,<0.3",
    "numpy>=1.24",
    "trimesh>=4.0",
    "typer>=0.15",
    "typing-extensions>=4.8",
    "rich>=13.0",
    "usd-core>=24.8",
]

[project.optional-dependencies]
uv = [
    "xatlas>=0.0.9",
]

[project.scripts]
fascat = "fascat.cli:run"

[project.urls]
Homepage = "https://pavelsimo.github.io/fascat"
Repository = "https://github.com/pavelsimo/fascat"
Issues = "https://github.com/pavelsimo/fascat/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.hatch.version]
path = "fascat/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["fascat"]

[tool.hatch.build.targets.sdist]
include = [
    "/fascat",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/PLAN.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["fascat"]

[[tool.mypy.overrides]]
module = [
    "fast_simplification",
    "meshoptimizer",
    "OCP.*",
    "pxr.*",
    "trimesh",
    "trimesh.*",
    "xatlas",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fascat --cov-report=term-missing"
markers = [
    "requires_ocp: requires the cadquery-ocp STEP backend",
    "requires_usd: requires the usd-core OpenUSD backend",
    "requires_xatlas: requires the xatlas UV unwrap backend",
]

[tool.coverage.run]
branch = true
source = ["fascat"]

[tool.coverage.report]
fail_under = 70
show_missing = true
